--- a/index.css
+++ b/index.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 body {
     background-color: #000;
+    font-family: 'Poppins', 'sans-serif';
 }
 
 .tabs {
@@ -13,6 +16,7 @@ body {
     padding: 10px;
     user-select: none;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    font-family: 'Poppins', 'sans-serif';
 }
 
 .tab {
@@ -23,14 +27,7 @@ body {
     cursor: pointer;
     padding: 10px;
     color: #fff;
-    font-size: 10px;
-}
-
-.tab:hover {
-    background-color: #292929;
-    border-radius: 8px;
-    transition: background-color 0.5s;
-    transition: border-radius 0.1s;
+    font-size: 12px;
 }
 
 .tab.active {
@@ -46,6 +43,10 @@ body {
     user-select: none;
 }
 
+.welcome {
+    font-family: 'Poppins', 'sans-serif';
+    color: #fff; font-size: 20px; margin: 5px 5px auto;
+}
 
 .header {
     transition: all 1s;
@@ -57,6 +58,7 @@ body {
     padding: 10px;
     user-select: none;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    font-family: 'Poppins', 'sans-serif';
 }
 
 .right {
@@ -75,9 +77,9 @@ body {
     user-select: none;
     outline: none;
     cursor: pointer;
-    padding: 7px 15px;
+    padding: 7px 13px;
     color: #fff;
-    font-size: 10px;
+    font-size: 12px;
 }
 
 .header-button:hover {
