--- a/index.css
+++ b/index.css
@@ -93,3 +93,40 @@ body {
     border-radius: 2px;
     transition: background-color 0.3s;
 }
+
+.events {
+    background-color: transparent;
+    width: 100%;
+    height: 30%;
+}
+
+.event {
+    display: block;
+    width: 90%;
+    height: 100%;
+    padding: 15px 0;
+    background-color: #282828;
+    color: #00ffa6;
+    border: 1px solid #444;
+    border-radius: 5px;
+    margin-top: 25px;
+    text-align: left;
+    font-size: 14px;
+    transition: background-color 0.3s;
+}
+
+.event:hover {
+    background-color: #383838;
+}
+
+.event span {
+    margin-left: 15px;
+}
+
+.event-content {
+    margin: 10px auto;
+    padding-bottom: 60px; /* Высота нижних вкладок */
+    height: 100vh;
+    overflow-y: auto;
+    user-select: none;
+}
