--- a/index.css
+++ b/index.css
@@ -20,6 +20,7 @@ body {
     user-select: none;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
     font-family: 'Poppins', 'sans-serif';
+    font-weight: bold;
 }
 
 .tab {
