--- a/index.css
+++ b/index.css
@@ -6,6 +6,12 @@ body {
     background-size: cover;
     font-family: 'Poppins', 'sans-serif';
     overflow: hidden;
+    touch-action: none;
+}
+
+* {
+    overflow: hidden;
+    touch-action: none;
 }
 
 .tabs {
